--- a/global.css
+++ b/global.css
@@ -1,13 +1,79 @@
-body, html{
+body,
+html {
     margin: 0;
     padding: 0;
 }
 
+.nav_bar {
+    padding: 20px 20px;
+    text-align: right;
+}
 
 main {
     font-family: "Architects Daughter", cursive;
     font-weight: 400;
     font-style: normal;
+
+}
+
+.date{
+    text-align: center;
+}
+
+.next_date{
+    text-align: right;
+    margin-right: 0.2em;
+    color: #838383;
+}
+
+.boat{
+    background-image: url('./img/with_shield.PNG');
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    z-index: -999;
+    opacity: 0.8;
+    bottom: 0px;
+    right: 40px;
+}
+
+.container {
+    background-color: #f2efe6;
+    width: fit-content;
+    max-width: 80%;
+    min-width: 400px;
+    margin: auto;
+    border-radius: 8px;
+    border: 1px solid #b3b0b0;
+    box-shadow: 5px 5px 5px #9f9d96;
+}
+
+.name{
+    font-size: 2em;
+    text-align: center;
+}
+
+.des{
+    text-align: center;
+    padding: 0 1em;
+}
+
+.container > div{
+    margin: 10px 10px;
+    border: 1px solid #c3c3c3;
+    border-radius: 3px;
+}
+
+body {
+    width: 100%;
+    height: 100vh;
+    background-color: #b3a58ea3;
+    /* background-image: url(./img/basic.PNG), url(./img/with_shield.PNG);
+    background-repeat: no-repeat, no-repeat;
+    background-position: bottom 50px right 100px, left -50px top;
+    background-size: 300px 300px, 240px 240px; */
 }
 
 
@@ -34,34 +100,30 @@ main {
     top: 30px;
 }
 
-.runes{
+.runes {
     text-align: center;
     font-size: xxx-large;
-    position: absolute;
-    left: 38%;
-    top: 50%;
 }
 
-.hide{
+.hide {
     display: none;
 }
 
-table{
-    width: 50%;
+.info_container {
+    position: relative;
+    top: -55px;
+    opacity: 0;
+}
+
+
+.info {
+    width: 400px;
     margin: auto;
     opacity: 0;
 }
 
-td,th{
-    vertical-align: baseline;
-    padding: 0 5px;
-}
 
-th{
-    text-align: right;
-}
-
-.footer{
+.footer {
     position: absolute;
     bottom: 0;
     text-align: right;
