--- a/assets/global.css
+++ b/assets/global.css
@@ -52,12 +52,12 @@ footer {
 }
 
 .season img{
-    width: 40px;
-    opacity: 0.5;
+    width: 70px;
+    opacity: 0.9;
 }
 
 
-.logos{
+.logo_container{
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -67,19 +67,13 @@ footer {
 
 
 .logo {
-    height: 60px;
+    height: 150px;
     width: auto;
 }
 
 .logo img{
     height: 100%;
     width: auto;
-}
-
-.ruler {
-    border-bottom: 1px solid black;
-    height: 60px;
-    width: 100%;
 }
 
 .rune {
@@ -176,10 +170,6 @@ footer {
         height: 25vw;
     }
 
-    .ruler {
-        width: 80%;
-        /* Make ruler occupy more space */
-    }
 
     .name {
         font-size: 5vw;
